--- a/repo/index.html
+++ b/repo/index.html
@@ -1,10 +1,7 @@
 <div id="title">noppelabs Cydia repo</div>
 <div id="content">
-This is my Cydia repo.<br>
-Feel free to add it to your list! Maybe some awesome stuff waits for you here ;)<br><br>
-<a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://noppelab.com/packages/repo/"><b>Open Cydia for me!</b></a><span id="ocy"></span><br><br>
+<a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://noppelab.com/packages/repo/"><b>Open Cydia</b></a><span id="ocy"></span><br><br>
 <hr>
-<h4>These are the packages on this repo</h4>
 <div id="samples" style="width:100%"></div>
 <script type="text/javascript">
 //Some fast iOS check.
